[tool.poetry]
name = "gemi-bot"
version = "0.1.0"
description = "A Telegram chat bot that leverages the `gemini-pro` API"
authors = ["Akash Mondal <a98mondal@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.5.0"
dependency-injector = "^4.41.0"
google-generativeai = "^0.5.2"
gunicorn = "^22.0.0"
pillow = "^10.3.0"
pypdfium2 = "^4.29.0"
duckduckgo-search = "^5.3.0"
sentry-sdk = "^1.45.0"
md2tgmd = {git = "https://github.com/yym68686/md2tgmd.git"}
python-dotenv = "^1.0.1"
g4f = {extras = ["image"], version = "^0.3.0.6"}
qdrant-client = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
