[tool.poetry]
name = "gemi-bot"
version = "0.1.0"
description = "A Telegram chat bot that leverages the `gemini-pro` API"
authors = ["Akash Mondal <a98mondal@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.0"
dependency-injector = "^4.42.0"
google-generativeai = "^0.8.1"
gunicorn = "^23.0.0"
pillow = "^10.4.0"
pypdfium2 = "^4.30.0"
duckduckgo-search = "^6.2.11"
sentry-sdk = "^2.14.0"
md2tgmd = {git = "https://github.com/yym68686/md2tgmd.git"}
python-dotenv = "^1.0.1"
g4f = {extras = ["image"], version = "^0.3.2.7"}
curl_cffi = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
