[tool.poetry]
name = "gemi-bot"
version = "0.1.0"
description = "A Telegram chat bot that leverages the `gemini-pro` API"
authors = ["Akash Mondal <a98mondal@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.16.0"
dependency-injector = "^4.44.0"
google-genai = "^0.3.0"
gunicorn = "^23.0.0"
pillow = "^11.1.0"
pypdfium2 = "^4.30.0"
sentry-sdk = "^2.19.2"
md2tgmd = {git = "https://github.com/yym68686/md2tgmd.git"}
pollinations = "^2.3.4"
python-dotenv = "^1.0.1"
tavily-python = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
